Fix String.length error in JwtProvider